<resources>
    <string name="app_name">Product Search</string>
    <string name="product_search_tab">SEARCH</string>
    <string name="product_wish_list_tab">WISH LIST</string>

    <string name="base_url">http://csci571-hw8-ps.us-west-1.elasticbeanstalk.com</string>

    <string name="text">text</string>
    <string name="icon">icon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="alert">No results</string>
    <string name="alertInWishList">No Wishes</string>

    <!--<string name=""></string>-->

    <!--Search Tab-->
    <string name="keyword">Keyword</string>
    <string name="input_keyword">Enter Keyword</string>

    <string name="category">Category</string>
    <string-array name="category_arr">
        <item>All</item>
        <item>Art</item>
        <item>Baby</item>
        <item>Books</item>
        <item>Clothing, Shoes &amp; Accessories</item>
        <item>Computers/Tablets &amp; Networking</item>
        <item>Health &amp; Beauty</item>
        <item>Music</item>
        <item>Video Games &amp; Consoles</item>
    </string-array>

    <string name="condition">Condition</string>
    <string name="condition_new">New</string>
    <string name="condition_used">Used</string>
    <string name="condition_unspecified">Unspecified</string>

    <string name="shipping_option">Shipping Options</string>
    <string name="shipping_pickup">Local Pickup</string>
    <string name="shipping_free">Free Shipping</string>

    <string name="enable_nearby">Enable Nearby Search</string>
    <string name="hint_mile">Miles from</string>
    <string name="from">From</string>
    <string name="current">Current Location</string>
    <string name="zip">zipcode</string>

    <string name="search_button">SEARCH</string>
    <string name="clear_button">CLEAR</string>

    <string name="warning">Please enter mandatory field</string>

    <!--Progress Bar-->
    <string name="progress">Searching Products...</string>

    <!--Icon-->
    <string name="tab_content_icon">tab_content_icon</string>

    <!-- Result -->
    <string name="itemImage">itemImage</string>
    <string name="itemTitle">itemTitle</string>
    <string name="itemZip">itemZip</string>
    <string name="itemShipping">itemShipping</string>
    <string name="itemCondition">itemCondition</string>
    <string name="itemPrice">itemPrice</string>
    <string name="cart">cart</string>
    <string name="showing">Showing</string>
    <string name="resultFor">results for</string>

    <!--Tabs-->
    <string name="tab1">PRODUCT</string>
    <string name="tab2">SHIPPING</string>
    <string name="tab3">PHOTOS</string>
    <string name="tab4">SIMILAR</string>

    <!--Tab1-->
    <string name="tab1_highlights">Highlights</string>
    <string name="tab1_dot">•</string>
    <string name="tab1_specif">Specifications</string>
    <string name="tab1_subtitle">Subtitle</string>
    <string name="tab1_price">Price</string>
    <string name="tab1_brand">Brand</string>

    <!--Tab2-->
    <string name="tab2_soldTitle">Sold By</string>
    <string name="tab2_storeName">Store Name</string>
    <string name="tab2_feedbackScore">Feedback Score</string>
    <string name="tab2_popularity">Popularity</string>
    <string name="tab2_feedbackStar">Feedback Star</string>

    <string name="tab2_shippingTitle">Shipping Info</string>
    <string name="tab2_cost">Shipping Cost</string>
    <string name="tab2_global">Global Shipping</string>
    <string name="tab2_time">Handling Time</string>
    <string name="tab2_condition">Condition</string>

    <string name="tab2_returnTitle">Return Policy</string>
    <string name="tab2_policy">Policy</string>
    <string name="tab2_returns">Returns within</string>
    <string name="tab2_refund">Refund Mode</string>
    <string name="tab2_ship">Shipped by</string>

    <!--Tab 4-->
    <string-array name="tab4_sort_arr">
        <item>Default</item>
        <item>Name</item>
        <item>Price</item>
        <item>Days</item>
    </string-array>

    <string-array name="tab4_order_arr">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    
    <!--Wish List-->
    <string name="wishList_total">Wishlist total(</string>
    <string name="wishList_item">items):</string>
    <string name="facebook">facebook</string>

</resources>
