<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/keyword"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/keyword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/input_keyword"
        android:inputType="text"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/warning1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/warning"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/title_text_size"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/category"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warning1" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:entries="@array/category_arr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/condition"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <CheckBox
        android:id="@+id/c_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/condition_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/c_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/condition_used"
        app:layout_constraintStart_toEndOf="@+id/c_new"
        app:layout_constraintTop_toTopOf="@+id/c_new" />

    <CheckBox
        android:id="@+id/c_unspecified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/condition_unspecified"
        app:layout_constraintStart_toEndOf="@+id/c_used"
        app:layout_constraintTop_toTopOf="@+id/c_new" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/shipping_option"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_new" />

    <CheckBox
        android:id="@+id/s_pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/shipping_pickup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/s_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/shipping_free"
        app:layout_constraintStart_toEndOf="@+id/s_pick"
        app:layout_constraintTop_toTopOf="@+id/s_pick" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/enable_nearby"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_pick" />

    <CheckBox
        android:id="@+id/enable_nearby_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/s_pick" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nearbyLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <EditText
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/hint_mile"
            android:inputType="number"
            android:textSize="@dimen/input_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/from"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distance" />

        <RadioGroup
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <RadioButton
                android:id="@+id/currentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/current" />

            <RadioButton
                android:id="@+id/zipBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </RadioGroup>

        <AutoCompleteTextView
            android:id="@+id/zipcode"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:dropDownAnchor="@+id/zipcode"
            android:hint="@string/zip"
            android:inputType="textAutoComplete"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/from" />

        <TextView
            android:id="@+id/warning2"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginStart="16dp"
            android:text="@string/warning"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/title_text_size"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="8dp"
        android:background="@color/colorOrange"
        android:text="@string/search_button"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearbyLayout" />

    <Button
        android:id="@+id/clear"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="8dp"
        android:background="@color/colorOrange"
        android:text="@string/clear_button"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toBottomOf="@+id/nearbyLayout" />


</android.support.constraint.ConstraintLayout>