<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resultLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductResults">

    <android.support.v7.widget.Toolbar
        android:id="@+id/result_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/progress"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/alert"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_back"
        android:paddingBottom="8dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/resultText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/showing"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/text"
            android:textColor="@color/colorOrange"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/resultText1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/resultFor"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/resultText2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/resultText"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/text"
            android:textColor="@color/colorOrange"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/resultText3"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/resultRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/resultText" />
</RelativeLayout>
